Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -90,6 +90,7 @@ header {
     display: block;
     float: left;
     padding: 0;
+    width: 25%;
 }
 
 /* COMPANY NAME */
@@ -206,7 +207,7 @@ footer .footer2 .columns-two-right {
 .widget.extendednavigation {
     float: right;
     position: relative;
-    max-width: 691px;
+    width: 75%;
     margin: 4px 0;
 }
 
@@ -215,7 +216,6 @@ footer .footer2 .columns-two-right {
 }
 
 .widget.extendednavigation ul {
-    float: left;
     margin: 0;
     padding: 0;
 }
